--- a/index copy 2.html
+++ b/index copy 2.html
@@ -88,13 +88,13 @@
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
                         <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center wow fadeInUp" data-wow-delay="100ms">
+                            <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item-aag">Home
                                 </li>
                                 <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
                             </ol>
                         </nav>
-                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Line Overview</h2>
+                        <h2 class="page-title">Line Overview</h2>
                     </div>
                 </div>
             </div>
@@ -347,93 +347,157 @@
         <div class="row row-ri">
             <div class="col-12">
                 <div class="breadcrumb-content text-center">
-                    <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Past Incidents</h2>
+                    <h2 class="page-title">Recent Incidents</h2>
                 </div>
             </div>
             <div class="slide-container swiper">
                 <div class="slide-content">
                     <div class="card-wrapper swiper-wrapper">
-                        <!-- Card 1 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="img/caplets/NSLCap.png" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-                                <p class="card-text">Track Point Fault - Additional 10mins
-                                    train travel time between #Yishun and #Sembawang.</p>
-                            </div>
-                        </div>
-                        <!-- Card 2 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-                                <p class="card-text"> Track Point Fault - Additional 10mins train travel
-                                    time between #Tampines and #PasirRis.</p>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
                             </div>
                         </div>
-                        <!-- Card 3 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile2.jpg" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-                                <p class="card-text" style="padding-right: 40px;">
-                                    Track Fault - Additional 15 mins travelling time from
-                                    #ToaPayoh to #Bishan towards #JurongEast.
-                                </p>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
                             </div>
                         </div>
-                        <!-- Card 4 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="400ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/04/2025
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile3.jpg" alt="" class="card-img">
+                                </div>
                             </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1908029621167382639"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-                                <p class="card-text" style="padding-right: 40px;">
-                                    Track Fault - Additional 20mins of
-                                    travelling time between #Queenstown and #BoonLay.
-                                </p>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile4.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile5.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile6.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile7.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card-ri swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile8.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="images/profile9.jpg" alt="" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="name">David Dell</h2>
+                                <p class="description">The lorem text the section that contains header with having open
+                                    functionality. Lorem
+                                    dolor sit amet consectetur adipisicing elit.</p>
+                                <button class="button">View More</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </button>
+                <div class="swiper-button-next swiper-navBtn"></div>
+                <div class="swiper-button-prev swiper-navBtn"></div>
                 <div class="swiper-pagination"></div>
-            </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./about.html" class="btn pw-btn btn-2 mt-15">See All &nbsp;<i
-                        class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
 
-    </section>
+
+    </section><!-- End Hero -->
 
 
 
