--- a/Experiment 3.html
+++ b/Experiment 3.html
@@ -85,20 +85,136 @@
 
 
     <section id="lrd" class="d-flex flex-column justify-content-center">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
+
+
+        <!-- Recent Incidents -->
+        <div class="row row-ri">
+
+            <div class="netw-up col-12">
                 <div class="col-12">
-                    <div class="breadcrumb-content text-center">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb justify-content-center wow fadeInUp" data-wow-delay="100ms">
-                                <li class="breadcrumb-item-aag">Home
-                                </li>
-                                <li class="breadcrumb-item-aag active" aria-current="page">At a glance</li>
-                            </ol>
-                        </nav>
-                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Line Overview</h2>
+                    <div class="breadcrumb-content text-center" style="padding-top: 0em;">
+                        <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">Network Uptime</h2>
                     </div>
                 </div>
+
+                <!-- 90 days (desktop/tablet) -->
+                <div class="uptime-bars uptime-bars-90 d-flex align-items-end"></div>
+
+                <!-- 30 days (mobile) -->
+                <div class="uptime-bars uptime-bars-30 d-flex align-items-end"></div>
+                <div class="d-flex justify-content-between mt-2" style="font-size:0.9em;">
+                    <span class="text-muted days-label" id="uptime-days-label">90 days ago</span>
+                    <span class="text-muted">18 May 2025</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-ri">
+            <div class="slide-container swiper">
+                <div class="slide-content">
+                    <div class="card-wrapper swiper-wrapper">
+                        <!-- Card 1 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, please expect an additional 10mins train travel
+                                    time between #Yishun and #Sembawang. Free regular bus service is available between
+                                    #Yishun and #Woodlands.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track point fault, pls add additional 10mins train travel time
+                                    between #Tampines and #PasirRis. Free regular bus service is available between
+                                    #Tampines and #PasirRis.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 3 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px">
+                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
+                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
+                                    #Bishan.
+                                </p>
+
+                            </div>
+                        </div>
+                        <!-- Card 4 -->
+                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="400ms">
+                            <div class="card-header-ri">
+                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/04/2025
+                            </div>
+                            <div class="card-body text-primary" style="position: relative;">
+                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                                <a href="https://x.com/SMRT_Singapore/status/1908029621167382639"
+                                    style="position: absolute; top: -34px; right: 16px;">
+                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
+                                </a>
+
+                                <p class="card-text-ri" style="font-size: 15px;">
+                                    Due to a track fault, please expect an additional 20mins of travelling time
+                                    between #Queenstown and #BoonLay. Shuttle train are available between #Clementi and
+                                    #JurongEast and #JurongEast and #Lakeside. Free regular bus is available...
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <div class="swiper-pagination"></div>
+            </div>
+            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">View Incident History &nbsp;<i
+                        class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+
+
+        <div class="col-12">
+            <div class="breadcrumb-content text-center">
+                <h2 class="page-title wow fadeInUp" data-wow-delay="100ms">
+                    Line Overview
+                </h2>
             </div>
         </div>
 
@@ -327,21 +443,14 @@
                 <div class="card card-do h-100 py-2">
                     <div class="card-header card-header-active py-3 d-flex align-items-center justify-content-between">
                         <h6 class="m-0 font-weight-bold text-black">
-                            <span data-title="Only delays reported officially will be shown">
-                                Network Uptime (18 Feb - 18 May 2025)</span>
+                            <span data-title="Delays less than 10 mins won't be reflected in this chart.">
+                                Delays Overview (> 10 mins)</span>
                         </h6>
                     </div>
                     <!-- Card Body -->
                     <div class="card-body card-body-do">
-
-                        <!-- 90 days (desktop/tablet) -->
-                        <div class="uptime-bars uptime-bars-90 d-flex align-items-end"></div>
-
-                        <!-- 30 days (mobile) -->
-                        <div class="uptime-bars uptime-bars-30 d-flex align-items-end"></div>
-                        <div class="d-flex justify-content-between mt-2" style="font-size:0.9em;">
-                            <span class="text-muted days-label" id="uptime-days-label">90 days ago</span>
-                            <span class="text-muted">18 May 2025</span>
+                        <div class="chart-area">
+                            <canvas id="delays-overview-sm-24"></canvas>
                         </div>
                     </div>
                 </div>
@@ -352,106 +461,6 @@
         <br>
 
 
-        <!-- Recent Incidents -->
-        <div class="row row-ri">
-            <div class="slide-container swiper">
-                <div class="slide-content">
-                    <div class="card-wrapper swiper-wrapper">
-                        <!-- Card 1 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="100ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 11/05/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1921451426167062994"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, please expect an additional 10mins train travel
-                                    time between #Yishun and #Sembawang. Free regular bus service is available between
-                                    #Yishun and #Woodlands.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 2 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="200ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 23/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1914816349135888488"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track point fault, pls add additional 10mins train travel time
-                                    between #Tampines and #PasirRis. Free regular bus service is available between
-                                    #Tampines and #PasirRis.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 3 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="300ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 16/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1912346685872988215"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px">
-                                    Due to a track fault, pls add 15mins train travel time from #ToaPayoh to
-                                    #Bishan towards #JurongEast. Free regular bus is available between #ToaPayoh and
-                                    #Bishan.
-                                </p>
-
-                            </div>
-                        </div>
-                        <!-- Card 4 -->
-                        <div class="card-ri swiper-slide wow fadeInUp" data-wow-delay="400ms">
-                            <div class="card-header-ri">
-                                <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 04/04/2025
-                            </div>
-                            <div class="card-body text-primary" style="position: relative;">
-                                <img src="img/caplets/EWLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
-                                <a href="https://x.com/SMRT_Singapore/status/1908029621167382639"
-                                    style="position: absolute; top: -34px; right: 16px;">
-                                    <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"></i>
-                                </a>
-
-                                <p class="card-text-ri" style="font-size: 15px;">
-                                    Due to a track fault, please expect an additional 20mins of travelling time
-                                    between #Queenstown and #BoonLay. Shuttle train are available between #Clementi and
-                                    #JurongEast and #JurongEast and #Lakeside. Free regular bus is available...
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="swiper-button-next swiper-navBtn" tabindex="0" aria-label="Next slide">
-                    <i class="fa-solid fa-arrow-right"></i>
-                </button>
-                <button class="swiper-button-prev swiper-navBtn" tabindex="0" aria-label="Previous slide">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </button>
-                <div class="swiper-pagination"></div>
-            </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
-                <a href="./past-records/past-records.html" class="btn pw-btn btn-2 mt-15">View Incident History &nbsp;<i
-                        class="fa-solid fa-arrow-right"></i></a>
-            </div>
-        </div>
 
     </section>
 
@@ -476,7 +485,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="js/index-alt.js"></script>
+    <script src="js/index.js"></script>
 
     <script src="overview/days-overview.js"></script>
 
@@ -498,9 +507,6 @@
     <script src="js/uptime-tooltip.js"></script>
 
     <script src="js/uptime-bars.js"></script>
-
-
-
 </body>
 
 </html>
