--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -101,45 +101,6 @@
           </div> -->
         </div>
         <!-- Collapsible Content -->
-        <div class="container container-slider">
-          <div class="row justify-content-center">
-            <div class="col-md-12">
-              <div class="category-lists-slider">
-                <div class="swiper-container" id="swiper-cat-slider">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                      <a href="eicw.html" class="category-button">
-                        Design System Introduction
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="eicw-2.html" class="category-button">
-                        Proposed Wayfinding Changes - Trains
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="eicw-3.html" class="category-button">
-                        Proposed Wayfinding Changes - Buses
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="eicw-4.html" class="category-button">
-                        Proposed UI/UX Changes
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#" class="category-button active">
-                        Rethinking CCL6 Signages
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="slider-button slider-prev"><i class="fa fa-chevron-left"></i></div>
-                <div class="slider-button slider-next"><i class="fa fa-chevron-right"></i></div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </section>
@@ -147,6 +108,47 @@
   <!-- Section Content -->
   <section class="about-me-sum clearfix">
     <div class="wbnrfz_eicw">
+
+            <div class="scrollable-tabs-container">
+                <div class="left-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                    </svg>
+
+                </div>
+
+                <ul>
+                    <li>
+                        <a href="eicw.html#dsi">Design System Introduction</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-2.html#pct">Proposed Wayfinding Changes - Trains</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-3.html#pcb">Proposed Wayfinding Changes - Buses</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-4.html#pcu">Proposed UI/UX Changes</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-5.html#pcc" class="active">Rethinking CCL6 Signages</a>
+                    </li>
+                </ul>
+
+                <div class="right-arrow active">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                    </svg>
+
+                </div>
+            </div>
+
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
