--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -73,7 +73,7 @@
     </header>
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 100vh;">
+        style="background-image: url(img/cover-light.png); height: 85vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -123,23 +123,23 @@
 
                 <ul>
                     <li>
-                        <a href="eicw.html#dsi">Design System Introduction</a>
+                        <a href="eicw.html">Design System Introduction</a>
                     </li>
 
                     <li>
-                        <a href="eicw-2.html#pct" class="active">Proposed Wayfinding Changes - Trains</a>
+                        <a href="eicw-2.html" class="active">Proposed Wayfinding Changes - Trains</a>
                     </li>
 
                     <li>
-                        <a href="eicw-3.html#pcb">Proposed Wayfinding Changes - Buses</a>
+                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
                     </li>
 
                     <li>
-                        <a href="eicw-4.html#pcu">Proposed UI/UX Changes</a>
+                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
                     </li>
 
                     <li>
-                        <a href="eicw-5.html#pcc">Rethinking CCL6 Signages</a>
+                        <a href="eicw-5.html">Rethinking CCL6 Signages</a>
                     </li>
                 </ul>
 
