--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -71,7 +71,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-eicw-4.png); height: 100vh;">
+    style="background-image: url(img/cover-eicw-4.png); height: 85vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -120,23 +120,23 @@
 
                 <ul>
                     <li>
-                        <a href="eicw.html#dsi">Design System Introduction</a>
+                        <a href="eicw.html">Design System Introduction</a>
                     </li>
 
                     <li>
-                        <a href="eicw-2.html#pct">Proposed Wayfinding Changes - Trains</a>
+                        <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
                     </li>
 
                     <li>
-                        <a href="eicw-3.html#pcb">Proposed Wayfinding Changes - Buses</a>
+                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
                     </li>
 
                     <li>
-                        <a href="eicw-4.html#pcu">Proposed UI/UX Changes</a>
+                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
                     </li>
 
                     <li>
-                        <a href="eicw-5.html#pcc" class="active">Rethinking CCL6 Signages</a>
+                        <a href="eicw-5.html" class="active">Rethinking CCL6 Signages</a>
                     </li>
                 </ul>
 
